--- a/Image Processing/Image Segmentation.ipynb
+++ b/Image Processing/Image Segmentation.ipynb
@@ -50,7 +50,10 @@
     "borders = find_boundaries(segments_fz)\n",
     "unique_colors = np.unique(segments_fz.ravel())\n",
     "segments_fz[borders] = -1\n",
-    "colors = [np.zeros(3)]"
+    "colors = [np.zeros(3)]\n",
+    "\n",
+    "pylab.imshow(img)\n",
+    "pylab.show()"
    ]
   },
   {
